# totalbackup

./: .classpath  .gitignore  README.md  totalbackuptray
resources/: messages.properties  messages_en.properties
src/: .classpath  .project  totalbackuptray
src/cpp/: CMakeLists.txt  TotalBackupTray.cpp  TotalBackupTray.h  TotalBackupTray.kdev4  cpp.kdev4  main.cpp
src/cpp/.kdev4/: TotalBackupTray.kdev4  cpp.kdev4
src/doc/: DestinationVerification.uxf  anforderugen.tex
src/java/data/: BackupElement.java  BackupInfos.java  BackupTask.java  BackupThreadContainer.java  Filter.java  Source.java  StructureFile.java
src/java/gui/: About.java  AboutDialog.java  DirectoryRestrictedFileSystemView.java  Edit.java  EditDialog.java  Filter.java  FilterDialog.java  IEditListener.java  IFilterDialogListener.java  IFilterListener.java  IMainframeListener.java  IPreparingListener.java  ISourcesListener.java  ISummaryListener.java  Mainframe.java  NextExecutionChooser.java  Preparing.java  PreparingDialog.java  SchedulingDialog.java  Sources.java  SourcesDialog.java  Summary.java  SummaryDialog.java  messages.properties  messages_en.properties
src/java/listener/: IBackupListener.java  IEditDialogListener.java  IFilterDialogListener.java  IMainframeListener.java  INECListener.java  IPreparingDialogListener.java  ISchedulingDialogListener.java  ISourcesDialogListener.java  ISummaryDialogListener.java
src/java/main/: Backup.java  BackupCanceledException.java  BackupElement.java  BackupHelper.java  BackupInfos.java  BackupTask.java  Backupable.java  (+8 more)
test/source/: testFile
(+76 files in other folders)
